New comp added from shortcut

--- a/src/components/ServiceSection.astro
+++ b/src/components/ServiceSection.astro
@@ -231,11 +231,11 @@
                                 </h3>
                                 <div class="body-default mb-3">
                                     <p>
-                                        We build APIs that are fast, reliable, and easy to use. It's our job to accomodate for every error, bad request, and user fumble. We hand over or refactor endpoints and include the tests. So you can be assured it works in every scenario. 
+                                        Dirty workd, we know. We build APIs that are fast, reliable, and easy to use. It's our job to accomodate for every error, bad request, and user fumble. We hand over or refactor endpoints and include the tests. So you can be assured it works in every scenario. 
                                     </p>
                                 </div>
                                 <a
-                                    href="/services/api-platforms"
+                                    href="/api-development"
                                     class="body-default read-more">Read more</a
                                 >
                             </div>
