--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -51,8 +51,8 @@ const query = groq`*[_type == "post"] {
 			<div class="bg-tertiary px-6 pt-24 sm:pt-32 lg:px-8">
 				<div class="mx-auto max-w-2xl text-center">
 				  <p class="text-base font-semibold leading-7 text-primary">Get the help you need</p>
-				  <h2 class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Support center</h2>
-				  <p class="mt-6 text-lg leading-8 text-gray-600">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.</p>
+				  <h2 class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Tech Talk - Insights from Tecplus</h2>
+				  <p class="mt-6 text-lg leading-8 text-gray-600">Dive into the world of Tecplus through our insightful blogs! Stay updated with the latest industry trends, explore our innovative techniques, and gain a sneak peek into our journey of transforming ideas into digital success stories. Here, we share our knowledge, inspirations, and the lessons learned along the way.</p>
 				</div>
 			  </div>
 
