--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -39,23 +39,23 @@ import Header from "../components/Header.astro";
 					<h1
 						class="max-w-2xl text-4xl font-bold tracking-tight text-black sm:text-6xl lg:col-span-2 xl:col-auto"
 					>
-						Helping our clients build better futures for humanity
+					Shaping the Future, One Digital Solution at a Time
 					</h1>
 					<div
 						class="mt-6 max-w-xl lg:mt-0 xl:col-end-1 xl:row-start-1"
 					>
 						<p class="text-lg leading-8 text-black">
-							We are an internationally recognised boutique
-							consultancy with a large presense. Our team of
-							seasoned experts represent
-							10 different countries in a
-							remote-first culture. 
-							
-							Having expanded from a founder 
-							 in 2015 to a multi-disciplinary
-							organisation that is 10 strong, we are all about
-							steady growth, credible craft, a commitment to
-							community and long-term relationships.
+							At Tecplus, we're not just technologists - we're dreamers, innovators, and problem-solvers passionate about propelling businesses into the future through digital solutions.
+
+Founded in [insert founding year], our journey began with a single purpose: to help businesses navigate the complex digital landscape with ease and efficiency. Over the years, we've grown into a robust team of designers, engineers, and strategists, each bringing a unique perspective and specialized skill set to the table.
+
+Our philosophy goes beyond the creation of digital products. We believe in shaping solutions that offer lasting value to businesses and their users. This means immersing ourselves in the 'why', understanding your business objectives thoroughly, and tailoring our technological prowess to match these goals.
+
+Our approach is holistic, inclusive, and forward-thinking. We stay attuned to industry trends, competitive landscapes, and user behaviors, continually refining our strategies to meet the dynamic needs of the digital world. At Tecplus, transparency and trust form the backbone of our relationships, fostering open communication and collaboration that transcends the typical client-vendor paradigm.
+
+We pride ourselves on our portfolio of successful digital transformations across various industries. Each project we undertake is a testament to our commitment to excellence, our innovative spirit, and our relentless pursuit of creating digital products that truly stand out.
+
+Join us on this exciting journey as we continue to shape the digital future, one innovative solution at a time. Welcome to Tecplus - where your digital dreams come to life.
 						</p>
 					</div>
 					<img
@@ -80,12 +80,10 @@ import Header from "../components/Header.astro";
 				<h2
 					class="mx-auto max-w-2xl text-3xl font-bold tracking-tight text-white sm:text-4xl"
 				>
-					Our customers love us
+				Ready to Transform Your Digital Journey? Connect with Tecplus Today!
 				</h2>
 				<p class="mx-auto mt-6 max-w-xl text-lg leading-8 text-white">
-					Aliquip reprehenderit incididunt amet quis fugiat ut velit.
-					Sit occaecat labore proident cillum in nisi adipisicing
-					officia excepteur tempor deserunt.
+					Unleash the full potential of your business with our innovative digital solutions. At Tecplus, we’re ready to bring your vision to life, creating tailored strategies that align with your business objectives. Don't wait for the future - shape it with Tecplus!
 				</p>
 				<div
 					class="mx-auto mt-20 grid max-w-lg grid-cols-4 items-center gap-x-8 gap-y-12 sm:max-w-xl sm:grid-cols-6 sm:gap-x-10 sm:gap-y-14 lg:max-w-4xl lg:grid-cols-5"
