New comp added from shortcut

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -356,6 +356,9 @@ With recognition of our work in UX/UI, product development, and API platform dev
 
 			<Footer />
 
+  <script is:inline type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/8376112.js"></script>
+
+
 			<script is:inline src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
       <script is:inline>
         const 
