--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -110,7 +110,7 @@ const featured = [
 					  <div class="pt-12 sm:mp-32 lg:pt-16">
 						<a href="#" class="inline-flex space-x-6">
 						 
-						  <span class="inline-flex items-center space-x-2 text-lg font-bold leading-6 text-secondary ">
+						  <span class="inline-flex items-center space-x-2 text-md md:text-lg font-bold leading-6 text-secondary ">
 							<span>#1 Platform in the world just shipped v0.1.0</span>
 							<svg class="h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 							  <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
@@ -118,7 +118,7 @@ const featured = [
 						  </span>
 						</a>
 					  </div>
-					  <h1 class="mt-10 hidden md:block text-5xl text-center md:text-left font-bold tracking-tight text-white  sm:text-6xl">Transforming <span class="gradient-1">Visions</span> into Powerful <span class="gradient-2">Realities</span></h1>
+					  <h1 class="mt-10 hidden md:block text-4xl text-left font-bold tracking-tight text-white  sm:text-6xl">Transforming <span class="gradient-1">Visions</span> into Powerful <span class="gradient-2">Realities</span></h1>
 					  <h1 class="mt-10 md:hidden text-7xl text-center  font-bold tracking-tight text-white ">Transforming Visions into Powerful <span class="gradient-2">Realities</span></h1>
 					  <p class="mt-6 text-lg leading-8 text-white">
 						We bring a new level experience in software design. Combining new technologies and mature practice to achieve enterprise ready results in
