New comp added from shortcut

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -178,7 +178,8 @@ With recognition of our work in UX/UI, product development, and API platform dev
             <div class="col-12 col-lg-6 mt-5 mt-lg-0">
 						<div class="video-embed w-full about-video position-relative">
 							<h1> Ask a question about your webiste</h1>
-							<input type="text" placeholder="Enter your question here" class="border w-full rounded-full py-2 px-2" />
+             
+							<div  class="border w-full rounded-full py-2 px-2" />
 						 
 						</div>
 					 </div>
