--- a/src/pages/support.astro
+++ b/src/pages/support.astro
@@ -74,7 +74,7 @@
               </div>
             </div>
             <div class="sm:col-span-2">
-              <label for="phone-number" class="block text-sm font-semibold leading-6 text-gray-900">Phone number</label>
+              <label for="phone-number" class="block text-sm font-semibold leading-6 text-gray-900">Ussee</label>
               <div class="mt-2.5">
                 <input type="tel" name="phone-number" id="phone-number" autocomplete="tel" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
               </div>
